--- a/逻辑判断.html
+++ b/逻辑判断.html
@@ -52,297 +52,11 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u246" class="ax_default box_2">
-        <div id="u246_div" class=""></div>
+      <div id="u263" class="ax_default label">
+        <div id="u263_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u247" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u248" class="ax_default box_2">
-        <div id="u248_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u249" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u250" class="ax_default box_2">
-        <div id="u250_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u251" class="text" style="visibility: visible;">
-          <p><span>货号</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u252" class="ax_default _三级标题">
-        <div id="u252_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u253" class="text" style="visibility: visible;">
-          <p><span>Snkrs获得数据</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u254" class="ax_default box_2">
-        <div id="u254_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u255" class="text" style="visibility: visible;">
-          <p><span>系统时间</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接线) -->
-      <div id="u256" class="ax_default _连接线">
-        <img id="u256_seg0" class="img " src="images/逻辑判断/u256_seg0.png" alt="u256_seg0"/>
-        <img id="u256_seg1" class="img " src="images/逻辑判断/u256_seg1.png" alt="u256_seg1"/>
-        <img id="u256_seg2" class="img " src="images/逻辑判断/u256_seg2.png" alt="u256_seg2"/>
-        <img id="u256_seg3" class="img " src="images/逻辑判断/u256_seg3.png" alt="u256_seg3"/>
-        <!-- Unnamed () -->
-        <div id="u257" class="text" style="visibility: visible;">
-          <p><span>库中无相同货号</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u258" class="ax_default box_2">
-        <div id="u258_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u259" class="text" style="visibility: visible;">
-          <p><span>PUSH DC</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接线) -->
-      <div id="u260" class="ax_default _连接线">
-        <img id="u260_seg0" class="img " src="images/逻辑判断/u260_seg0.png" alt="u260_seg0"/>
-        <img id="u260_seg1" class="img " src="images/逻辑判断/u260_seg1.png" alt="u260_seg1"/>
-        <img id="u260_seg2" class="img " src="images/逻辑判断/u260_seg2.png" alt="u260_seg2"/>
-        <img id="u260_seg3" class="img " src="images/逻辑判断/u256_seg3.png" alt="u260_seg3"/>
-        <!-- Unnamed () -->
-        <div id="u261" class="text" style="visibility: visible;">
-          <p><span>库中存在相同货号，不同ID</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u262" class="ax_default box_2">
-        <div id="u262_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u263" class="text" style="visibility: visible;">
-          <p><span>FILTER</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u264" class="ax_default box_2">
-        <div id="u264_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u265" class="text" style="visibility: visible;">
-          <p><span>PUSH DC</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接线) -->
-      <div id="u266" class="ax_default _连接线">
-        <img id="u266_seg0" class="img " src="images/逻辑判断/u266_seg0.png" alt="u266_seg0"/>
-        <img id="u266_seg1" class="img " src="images/逻辑判断/u266_seg1.png" alt="u266_seg1"/>
-        <img id="u266_seg2" class="img " src="images/逻辑判断/u266_seg2.png" alt="u266_seg2"/>
-        <img id="u266_seg3" class="img " src="images/逻辑判断/u256_seg3.png" alt="u266_seg3"/>
-        <!-- Unnamed () -->
-        <div id="u267" class="text" style="visibility: visible;">
-          <p><span>发售时间后</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接线) -->
-      <div id="u268" class="ax_default _连接线">
-        <img id="u268_seg0" class="img " src="images/逻辑判断/u268_seg0.png" alt="u268_seg0"/>
-        <img id="u268_seg1" class="img " src="images/逻辑判断/u268_seg1.png" alt="u268_seg1"/>
-        <img id="u268_seg2" class="img " src="images/逻辑判断/u268_seg2.png" alt="u268_seg2"/>
-        <img id="u268_seg3" class="img " src="images/逻辑判断/u256_seg3.png" alt="u268_seg3"/>
-        <!-- Unnamed () -->
-        <div id="u269" class="text" style="visibility: visible;">
-          <p><span>发售时间前</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接线) -->
-      <div id="u270" class="ax_default _连接线">
-        <img id="u270_seg0" class="img " src="images/逻辑判断/u270_seg0.png" alt="u270_seg0"/>
-        <img id="u270_seg1" class="img " src="images/逻辑判断/u270_seg1.png" alt="u270_seg1"/>
-        <!-- Unnamed () -->
-        <div id="u271" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u272" class="ax_default box_2">
-        <div id="u272_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u273" class="text" style="visibility: visible;">
-          <p><span>补货逻辑</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u274" class="ax_default box_2">
-        <div id="u274_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u275" class="text" style="visibility: visible;">
-          <p><span>上新逻辑</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u276" class="ax_default box_2">
-        <div id="u276_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u277" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u278" class="ax_default box_2">
-        <div id="u278_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u279" class="text" style="visibility: visible;">
-          <p><span>提</span></p><p><span>醒</span></p><p><span>逻</span></p><p><span>辑</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u280" class="ax_default box_2">
-        <div id="u280_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u281" class="text" style="visibility: visible;">
-          <p><span>发售时间</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接线) -->
-      <div id="u282" class="ax_default _连接线">
-        <img id="u282_seg0" class="img " src="images/逻辑判断/u282_seg0.png" alt="u282_seg0"/>
-        <img id="u282_seg1" class="img " src="images/逻辑判断/u282_seg1.png" alt="u282_seg1"/>
-        <img id="u282_seg2" class="img " src="images/逻辑判断/u282_seg2.png" alt="u282_seg2"/>
-        <img id="u282_seg3" class="img " src="images/逻辑判断/u282_seg3.png" alt="u282_seg3"/>
-        <!-- Unnamed () -->
-        <div id="u283" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u284" class="ax_default box_2">
-        <div id="u284_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u285" class="text" style="visibility: visible;">
-          <p><span>PUSH DC</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接线) -->
-      <div id="u286" class="ax_default _连接线">
-        <img id="u286_seg0" class="img " src="images/逻辑判断/u286_seg0.png" alt="u286_seg0"/>
-        <img id="u286_seg1" class="img " src="images/逻辑判断/u286_seg1.png" alt="u286_seg1"/>
-        <img id="u286_seg2" class="img " src="images/逻辑判断/u286_seg2.png" alt="u286_seg2"/>
-        <img id="u286_seg3" class="img " src="images/逻辑判断/u282_seg3.png" alt="u286_seg3"/>
-        <!-- Unnamed () -->
-        <div id="u287" class="text" style="visibility: visible;">
-          <p><span>距发售时间=15m</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u288" class="ax_default box_2">
-        <div id="u288_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u289" class="text" style="visibility: visible;">
-          <p><span>FILTER</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接线) -->
-      <div id="u290" class="ax_default _连接线">
-        <img id="u290_seg0" class="img " src="images/逻辑判断/u290_seg0.png" alt="u290_seg0"/>
-        <img id="u290_seg1" class="img " src="images/逻辑判断/u290_seg1.png" alt="u290_seg1"/>
-        <img id="u290_seg2" class="img " src="images/逻辑判断/u290_seg2.png" alt="u290_seg2"/>
-        <img id="u290_seg3" class="img " src="images/逻辑判断/u282_seg3.png" alt="u290_seg3"/>
-        <!-- Unnamed () -->
-        <div id="u291" class="text" style="visibility: visible;">
-          <p><span>距发售时间＞15m</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u292" class="ax_default box_2">
-        <div id="u292_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u293" class="text" style="visibility: visible;">
-          <p><span>ID= id</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u294" class="ax_default box_2">
-        <div id="u294_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u295" class="text" style="visibility: visible;">
-          <p><span>货号= </span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u296" class="ax_default box_2">
-        <div id="u296_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u297" class="text" style="visibility: visible;">
-          <p><span>发售时间= startSellDate</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u298" class="ax_default box_2">
-        <div id="u298_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u299" class="text" style="visibility: visible;">
-          <p><span>colorCode</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u300" class="ax_default box_2">
-        <div id="u300_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u301" class="text" style="visibility: visible;">
-          <p><span>style</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (文本段落) -->
-      <div id="u302" class="ax_default _文本段落">
-        <img id="u302_img" class="img " src="images/逻辑判断/u302.png"/>
-        <!-- Unnamed () -->
-        <div id="u303" class="text" style="visibility: visible;">
-          <p><span>-</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接线) -->
-      <div id="u304" class="ax_default _连接线">
-        <img id="u304_seg0" class="img " src="images/逻辑判断/u304_seg0.png" alt="u304_seg0"/>
-        <img id="u304_seg1" class="img " src="images/逻辑判断/u304_seg1.png" alt="u304_seg1"/>
-        <img id="u304_seg2" class="img " src="images/逻辑判断/u304_seg2.png" alt="u304_seg2"/>
-        <img id="u304_seg3" class="img " src="images/逻辑判断/u304_seg3.png" alt="u304_seg3"/>
-        <!-- Unnamed () -->
-        <div id="u305" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
+        <div id="u264" class="text" style="visibility: visible;">
+          <p><span>上新：</span></p><p><span><br></span></p><p><span>补货：</span></p><p><span><br></span></p><p><span>特殊活动：</span></p>
         </div>
       </div>
     </div>
